r250 (09. 07. 2024):
Added achievement progress filters in Achievement List Screen - "Tracked in EHI" and "The Secret"
Gage Package Tracker: Fixed for real current count is stuck at 0 (client only)
Zipline: Fixed an issue where time is not properly updated when a loot bag is "eaten" by ElementAreaTrigger

r249 (04. 07. 2024):
Biker Buff: Fixed an issue where the buff was no longer visible after getting out of custody and buff visibility is set to persistent
Gage Package Tracker: Possible fix for an issue where the current count is stuck at 0 (client only)
Improved compatibility with "Any Day Any Heist" mod
Infamy Pool: Improved the counter to show next available and count of passing maximum Infamy Pool XP
Further memory optimization by removing unused buff classes from the memory
Fixed an issue where option "Buff -> Stoic -> Applied damage over-time" has no effect

r248 (26. 06. 2024):
Enabled grouping for Ziplines; further improving memory consumption with 2 or more ziplines on the map
Bank Heist: Fixed a crash after securing bags or picking up small loot
Experience Tracker: Fixed an issue when you lost XP after picking up Gage package (visual; client only)
Civilian Counter: Fixed an issue when civilian is deleted by mission script and counter is showing negative value (client only)
Loot Counter: Fixed issues with counter getting stuck
Loot Counter: Improved mod compatibility that load heists that need an offset to stay accurate
Trade Delay Tracker: Fixed an issue where text can overflow in the panel

r247 (15. 06. 2024):
Fixed crashes related to achievement progress counters

r246 (14. 06. 2024):
Murky Station: Fixed a crash when a bag is secured
Lab Rats: Fixed a crash when a bag is secured

r245 (12. 06. 2024):
Added icon color distinction for achievement tracker, side job tracker or trophy tracker

r244 (04. 06. 2024):
Aggregated Health Equipment Tracker: Fixed crashes
Equipment Tracker: Fixed a crash

r243 (03. 06. 2024):